refactor/temp_check_err.txt
    Checking citybound_native v0.10.0 (C:\Users\Fa\Desktop\IAF\citybound\refactor)
error[E0425]: cannot find function `thread_rng` in crate `rand`
   --> src\judicial.rs:318:26
    |
318 |                 if rand::thread_rng().gen::<f32>() < fair_chance {
    |                          ^^^^^^^^^^ not found in `rand`
    |
note: found an item that was configured out
   --> C:\Users\Fa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.8.6\src\lib.rs:74:30
    |
 73 | #[cfg(all(feature = "std", feature = "std_rng"))]
    |           --------------- the item is gated behind the `std` feature
 74 | pub use crate::rngs::thread::thread_rng;
    |                              ^^^^^^^^^^

error[E0425]: cannot find function `thread_rng` in crate `rand`
   --> src\judicial.rs:353:26
    |
353 |                 if rand::thread_rng().gen::<f32>() < 0.05 * dt {
    |                          ^^^^^^^^^^ not found in `rand`
    |
note: found an item that was configured out
   --> C:\Users\Fa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.8.6\src\lib.rs:74:30
    |
 73 | #[cfg(all(feature = "std", feature = "std_rng"))]
    |           --------------- the item is gated behind the `std` feature
 74 | pub use crate::rngs::thread::thread_rng;
    |                              ^^^^^^^^^^

error[E0425]: cannot find function `thread_rng` in crate `rand`
   --> src\judicial.rs:393:18
    |
393 |         if rand::thread_rng().gen::<f32>() < adjusted {
    |                  ^^^^^^^^^^ not found in `rand`
    |
note: found an item that was configured out
   --> C:\Users\Fa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.8.6\src\lib.rs:74:30
    |
 73 | #[cfg(all(feature = "std", feature = "std_rng"))]
    |           --------------- the item is gated behind the `std` feature
 74 | pub use crate::rngs::thread::thread_rng;
    |                              ^^^^^^^^^^

error[E0425]: cannot find function `thread_rng` in crate `rand`
   --> src\judicial.rs:394:62
    |
394 |             let amount = case.damages_claimed * (0.3 + rand::thread_rng().gen::<f32>() * 0.7);
    |                                                              ^^^^^^^^^^ not found in `rand`
    |
note: found an item that was configured out
   --> C:\Users\Fa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.8.6\src\lib.rs:74:30
    |
 73 | #[cfg(all(feature = "std", feature = "std_rng"))]
    |           --------------- the item is gated behind the `std` feature
 74 | pub use crate::rngs::thread::thread_rng;
    |                              ^^^^^^^^^^

error[E0425]: cannot find function `thread_rng` in crate `rand`
   --> src\judicial.rs:396:25
    |
396 |         } else if rand::thread_rng().gen::<f32>() < 0.3 {
    |                         ^^^^^^^^^^ not found in `rand`
    |
note: found an item that was configured out
   --> C:\Users\Fa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.8.6\src\lib.rs:74:30
    |
 73 | #[cfg(all(feature = "std", feature = "std_rng"))]
    |           --------------- the item is gated behind the `std` feature
 74 | pub use crate::rngs::thread::thread_rng;
    |                              ^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> src\judicial.rs:20:5
   |
20 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0124]: field `corruption_level` is already declared
  --> src\judicial.rs:89:5
   |
88 |     pub corruption_level: f32,   // 0.0 = limpio, 1.0 = totalmente corrupto
   |     ------------------------- `corruption_level` first declared here
89 |     pub corruption_level: f32,   // 0.0 = limpio, 1.0 = totalmente corrupto
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ field already declared

error[E0062]: field `corruption_level` specified more than once
  --> src\judicial.rs:89:5
   |
88 |     pub corruption_level: f32,   // 0.0 = limpio, 1.0 = totalmente corrupto
   |     ------------------------- first use of `corruption_level`
89 |     pub corruption_level: f32,   // 0.0 = limpio, 1.0 = totalmente corrupto
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ used more than once

error[E0599]: no variant named `Settled` found for enum `CaseRuling`
   --> src\judicial.rs:323:75
    |
 93 | pub enum CaseRuling {
    | ------------------- variant `Settled` not found here
...
323 |                         CaseRuling::PlaintiffWon { amount } | CaseRuling::Settled { amount } => {
    |                                                                           ^^^^^^^ variant not found in `CaseRuling`

error[E0599]: no variant named `Settled` found for enum `CaseRuling`
   --> src\judicial.rs:398:25
    |
 93 | pub enum CaseRuling {
    | ------------------- variant `Settled` not found here
...
398 |             CaseRuling::Settled { amount }
    |                         ^^^^^^^ variant not found in `CaseRuling`

Some errors have detailed explanations: E0062, E0124, E0425, E0599.
For more information about an error, try `rustc --explain E0062`.
warning: `citybound_native` (lib) generated 1 warning
error: could not compile `citybound_native` (lib) due to 9 previous errors; 1 warning emitted
